# proxscribe

./: .env.ci  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
src/app/: settings.py  urls.py
src/servers/: admin.py  apps.py  models.py  signal_handlers.py
src/servers/logic/: client_creator.py  import_inbounds.py
src/servers/migrations/: 0001_initial.py  0002_initial.py
src/servers/views/: subscription.py
src/servers/xui_client/: client.py
src/servers/xui_client/schemas/: _base.py  add_client.py  delete_client.py  get_inbounds.py  login.py
src/templates/common/: base.html
src/templates/servers/: subscriptions.html
src/templates/users/: login.html
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py
src/users/views/: main_page.py
