[project]
name = "proxscribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.1",
    "environs[django]>=11.0.0",
    "httpx>=0.27.2",
    "pydantic>=2.9.2",
    "uvicorn>=0.31.0",
    "whitenoise>=6.7.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
]
